--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["pypy3.9", "pypy3.10", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.12"]
 
     steps:
     - name: Checkout code
@@ -26,8 +26,9 @@ jobs:
       run: . venv/bin/activate
     
     - name: Install dependencies
-      run: \
-        pip install GitPython mpy-cross-v5
+      run: |
+        python3 -m pip install --upgrade pip setuptools wheel
+        pip3 install GitPython mpy-cross-v5
         sudo apt install zip unzip
 
     - name: Build project
