comfix: Fix errors

--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -59,3 +59,4 @@ jobs:
         artifacts: "release.tar.gz,foo/*.txt"
         bodyFile: "body.md"
         token: ${{ secrets.GITHUB_TOKEN }}
+        tag: "preview"
