comfix: Fix errors

--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -56,7 +56,6 @@ jobs:
     - name: Create Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "release.tar.gz,foo/*.txt"
-        bodyFile: "body.md"
+        artifacts: "build.zip"
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: "preview"
