--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -59,3 +59,9 @@ jobs:
         artifacts: "build.zip"
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: "preview"
+        prerelease: true
+        allowUpdates: true
+        body: |
+          ** 我是机器人，此操作是自动执行的。 **
+        generateReleaseNotes: true
+        name: Preview
