--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -35,13 +35,13 @@ jobs:
       run: python3 tools/Build.py
 
     - name: Create compress file
-      run: zip -r build.zip build
+      run: zip -r Build.zip build
 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3
       with:
         name: build-artifacts
-        path: build.zip
+        path: Build.zip
 
   release:
     needs: build
@@ -56,12 +56,14 @@ jobs:
     - name: Create Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "build.zip"
+        artifacts: "Build.zip"
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: "preview"
         prerelease: true
         allowUpdates: true
         body: |
           ** 我是机器人，此操作是自动执行的。 **
+
+          这是自动构建，下载附件中的 `Build.zip` 即可获得构建完成后的版本。
         generateReleaseNotes: true
         name: Preview
