feat/fix:修复大量代码，支持dict和其他所有类型 @emofalling

--- a/code/SeniorOS/lib/test.toml
+++ b/code/SeniorOS/lib/test.toml
@@ -1,4 +1,6 @@
-num = "3.14"
+num = 3.14
 str = "Hello, world!"
-bool = "True"
+bool = True
 list = [1,2,3,4,5]
+[dict]
+dict = {'key1': 'value1', 'key2': 'value2'}
