confix：解决了无法连接WiFi的问题 如题

--- a/code/SeniorOS/lib/test.toml
+++ b/code/SeniorOS/lib/test.toml
@@ -1,5 +1,3 @@
-num = 3.14
-str = "Hello, world!"
-bool = True
-list = [1,2,3,4,5]
-dict = {'key1': 'value1', 'key2': 'value2'}
+test = "test"
+test2 = "test2"
+num = 113413
